--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,40 @@ text-align: center; font-size: 20px; font-weight: bold; color: #fff; cursor: poi
 .video .video_h h2{ font-size:30px; font-weight: bold; color: #000000; letter-spacing:5px;}
 .video .video_h>div{ width:50px; height: 5px; margin: 10px auto; background:#78D1C5;}
 .video .video_box{ width:329px; float: left; margin-left: 25px;  margin-top: 10px;}
-.video .video_box .video_box_work{ width: 100%; height: 196px; border: 1px solid #000;}
+.video .video_box .video_box_work{ width: 329px; height: 196px; border: 1px solid #000; position: relative;}
+.video_box_work .overlay{
+    background-color: rgba(96,96,96,.9);
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 329px;
+    height: 196px;
+    color: #fff;
+    opacity: 0;  /*透明度*/
+    filter: alpha(opacity=0);
+    -webkit-transition: all 450ms ease-out 0s;
+    -moz-transition: all 450ms ease-out 0s;
+    -o-transition: all 450ms ease-out 0s;
+    transition: all 450ms ease-out 0s;
+
+    -webkit-transform: rotateY(180deg) scale(0.5,0.5);
+    -moz-transform: rotateY(180deg) scale(0.5,0.5);
+    -ms-transform: rotateY(180deg) scale(0.5,0.5);
+    -o-transform: rotateY(180deg) scale(0.5,0.5);
+    transform: rotateY(180deg) scale(0.5,0.5);
+}
+.video_box_work:hover .overlay{
+    opacity: 1;
+    filter: alpha(opacity=100);
+
+    -webkit-transform: rotateY(0deg) scale(1,1);
+    -moz-transform: rotateY(0deg) scale(1,1);
+    -ms-transform: rotateY(0deg) scale(1,1);
+    -o-transform: rotateY(0deg) scale(1,1);
+    transform: rotateY(0deg) scale(1,1);
+}
+.video_box_work .overlay h4 {font-size: 18px;font-weight: 700;line-height: 24px;margin: 25px 0 8px;color: #d2df82;  }
 .video .video_box a{ width: 329px; height: 35px; color: #000; display: block;
 text-align: center; line-height: 35px; font-size: 16px; font-weight: bold;}
 .video .video_box a:hover{ background: red; color: #fff; display: block;}
@@ -50,7 +83,7 @@ text-align: center; line-height: 35px; font-size: 16px; font-weight: bold;}
 .note div ul .note_work{ float:left; width: 500px; height: 50px;margin-left: 50px; margin-top: 5px; cursor: pointer;}
 .note_work .nub{ float:left; width: 30px; height: 30px; text-align: center; line-height: 30px; background: #78D1C5; margin: 10px; font-size: 20px; color: #fff;}
 .note_work a{ line-height:50px; color: #000; font-size: 20px;}
-
+/*尾部*/
 .all .footer{ width: 100%; height: 50px; text-align: center; line-height: 50px; background: #666; color: #fff; font-size: 14px; font-weight: bold;}
 
 
